rename paths in controllers

--- a/src/main/webapp/WEB-INF/views/tools/show.html
+++ b/src/main/webapp/WEB-INF/views/tools/show.html
@@ -10,7 +10,7 @@
 
 <hr/>
 
-<form th:action="@{/tools/{id}/editTool(id=${tool.id})}">
+<form th:action="@{/tools/{id}/edit(id=${tool.id})}">
     <input type="submit" value="Edit"/>
 </form>
 
