--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -10,7 +10,7 @@
 
 <hr/>
 
-<form th:action="@{/people/{id}/editPerson(id=${person.id})}">
+<form th:action="@{/people/{id}/edit(id=${person.id})}">
     <input type="submit" value="Edit"/>
 </form>
 
