Rename "id" field in models. Add autoincrement "id" fields

--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -10,11 +10,11 @@
 
 <hr/>
 
-<form th:action="@{/people/{id}/edit(id=${person.id})}">
+<form th:action="@{/people/{id}/edit(id=${person.client_id})}">
     <input type="submit" value="Edit"/>
 </form>
 
-<form th:method="DELETE" th:action="@{/people/{id}(id=${person.id})}">
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.client_id})}">
     <input type="submit" value="Delete"/>
 </form>
 
