--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form th:method="POST" th:action="@{/people/{id}(id=${person.id})}" th:object="${person}">
+<form th:method="POST" th:action="@{/people/{id}(id=${person.client_id})}" th:object="${person}">
     <label for="name">Enter you FSP: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color: darkred" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
