--- a/src/main/webapp/WEB-INF/views/people/list.html
+++ b/src/main/webapp/WEB-INF/views/people/list.html
@@ -8,7 +8,7 @@
 <body>
 
 <div th:each="person : ${people}">
-    <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name + ', ' + person.yearBirth}">client</a>
+    <a th:href="@{/people/{id}(id=${person.client_id})}" th:text="${person.name + ', ' + person.yearBirth}">client</a>
 </div>
 
 <br/>
