--- a/src/main/webapp/WEB-INF/views/tools/show.html
+++ b/src/main/webapp/WEB-INF/views/tools/show.html
@@ -10,6 +10,19 @@
 
 <hr/>
 
+<form th:method="GET" th:action="@{/tools/{id}(id=${tool.tool_id})}">
+    <label for="person">Chose person:</label>
+    <select th:object="${person}" th:field="*{client_id}" id="person">
+        <option th:each="person : ${people}" th:value="${person.client_id}"
+                th:text="${person.getName()}"></option>
+    </select>
+
+    <input type="submit" value="To rent out"/>
+</form>
+
+<hr/>
+<br/>
+
 <form th:action="@{/tools/{id}/edit(id=${tool.tool_id})}">
     <input type="submit" value="Edit"/>
 </form>
