--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,18 +5,21 @@
     <title>Person</title>
 </head>
 <body>
-<p th:text="${person.name + ', ' + person.yearBirth + ', ' + person.email}">VALUE</p>
-<hr th:if="${not #lists.isEmpty(tools)}"/>
-<!--<p th:text="This person did rent tools" th:if="${#lists.isEmpty(tools)}">noTools</p>-->
-
-<p th:text="Tools + ':'" style="font-weight: bold" th:if="${not #lists.isEmpty(tools)}">tools</p>
-
-
-<div th:each="tool : ${tools}">
-    <a th:text="${tool.name + ', ' + tool.brand + ', ' + tool.price}">client</a>
-</div>
+<p th:text="${person.name + ', ' + person.yearBirth + ', ' + person.email}">value</p>
+<p th:text="'This ' + 'tool ' + 'is ' + 'free'" th:if="${#lists.isEmpty(tools)}">value</p>
 
 <hr/>
+
+<div th:if="${not #lists.isEmpty(tools)}">
+    <p th:text="Tools + ':'" style="font-weight: bold">tools</p>
+
+    <div th:each="tool : ${tools}">
+        <a th:text="${tool.name + ', ' + tool.brand + ', ' + tool.price}">client</a>
+    </div>
+
+    <hr/>
+</div>
+
 
 <form th:action="@{/people/{id}/edit(id=${person.client_id})}">
     <input type="submit" value="Edit"/>
